_assets/css/site-main.css
.entry-content {
    background: linear-gradient(to bottom, rgba(173, 216, 230, 0.1), rgba(173, 216, 230, 0.7)), url('../images/notary-sign.jpg');
    background-position: center center;
    background-size: cover;
}

.entry-content p {
    text-shadow: 2px 2px 7px rgba(0,0,0,0.9);
    font-size: 4em;
    text-align: center;
    color: #FFF;
    padding: 1.4em 0.3em;
    font-style: italic;
    letter-spacing: 2px;
}

.office-info {
    padding: 1em 0;
}

.useful-links {
    padding: 1em 0;
    background-color: #FFF;
}

.useful-links .link {
    margin: 1em 0;
    text-align: center;
}

.useful-links .link::after {
    display: block;
    content: '';
    width: 0;
    height: 3px;
    margin: 0 auto;
    background-color: var(--color-border-default);
    transition: width 0.3s ease-in;
}

.useful-links .link:hover::after {
    width: 55%;
}

